--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,43 @@
   padding: 0;
   margin: 0;
 }
+.skeleton-loading {
+  background-color: #f0f0f0; /* cor de fundo do esqueleto */
+  overflow: hidden; /* garante que o conteúdo não ultrapasse os limites do esqueleto */
+  animation: loadingAnimation 1s infinite alternate; /* animação de loading */
+}
+
+.skeleton-item {
+  height: 60px; /* altura padrão do item do esqueleto */
+  margin-bottom: 10px; /* espaço entre os itens */
+}
+
+/* Animação de loading */
+@keyframes loadingAnimation {
+  0% {
+    opacity: 0.5; /* transparência inicial */
+  }
+  100% {
+    opacity: 1; /* transparência final */
+  }
+}
+.background-animate {
+  background-size: 400%;
+
+  -webkit-animation: AnimationName 3s ease infinite;
+  -moz-animation: AnimationName 3s ease infinite;
+  animation: AnimationName 3s ease infinite;
+}
+
+@keyframes AnimationName {
+  0%,
+  100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+}
 
 @keyframes rotate {
   from {
